# archero-game-server

./: .gitignore  README.md  cert.pem  key.pem  main.py  pyproject.toml
Client/: frida.d.ts  package.json  tsconfig.json
Client/Android/: agent.js  index.ts  multiple_unpinning.ts  socket_patcher.ts  storage_patcher.ts
Client/iOS/: index.ts
Server/: Core.py
Server/Config/: ActivityChristmas.py  BattlePassConfigData.py  GameConfig.py  MazeConfig.py  PveStageRankReward.py  PvpReward.py  PvpSeason.py  WorldcupMatches.py
client/: frida.d.ts  injector.py  package.json
client-ts/: biome.json  package.json  tsconfig.json
client-ts/android/: agent_12020.ts  agent_config.ts  agent_config_il2cpp.ts  agent_core_server.ts  agent_dev.ts  agent_discover_connect.ts  agent_force_12020.ts  index.ts
docs/: Roadmap.md
sandbox/: package-lock.json  package.json  server.ts  tsconfig.json
sandbox-ts/: biome.json  package.json  server.ts
server/: core.py
server-py/: __init__.py  combined_server.py  core.py  protocol.py  pyproject.toml  tcp_server.py  test_protocol.py
server-py/certs/: server.crt  server.key
server-py/config/: daily_season_data.py  game_activity_treasure.py  game_choice_box.py  header.py  player_profile.py  pve_week_rank_reward.py  shop_in_app_purchase.py  static_config.py
server-py/handlers/: login.py
server-py/protocol/: __init__.py  activities.py  battlepass.py  binary.py  common.py  daily.py  equipment.py  game.py  login.py  misc.py  packet.py  packet_handler.py
tools/: dev_run.py  record_first_minute.py  summarize_session.py
(+87 files in other folders)
