[project]
name = "archero-server"
version = "0.0.1"
description = "Archero game server"
requires-python = ">=3.13"
dependencies = [
    "pyopenssl",
    "msgpack",
    "flask",
    "cryptography",
]

[project.scripts]
server = "core:main"
combined = "combined_server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = [".", "config", "handlers"]

[tool.uv]
package = true
